--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
 }
