--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".view.activity.ParticularsActivity" />
         <activity android:name=".view.activity.UserInfoActivity" />
         <activity android:name=".view.activity.RegisterActivity" />
-        <activity android:name=".view.activity.LoginActivity"></activity>
+        <activity android:name=".view.activity.LoginActivity" />
     </application>
 
 </manifest>
