--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.jcodecraeer:xrecyclerview:1.3.2'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
+    implementation files('libs/open_sdk_r5990_lite.jar')
 }
