--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     implementation files('libs/open_sdk_r5990_lite.jar')
+    implementation files('libs/alipaySdk-20180403.jar')
 }
